syntax = "proto3";

package yandex.cloud.priv.iam.v1.ts;

message Subject {
  oneof type {
    UserAccount user_account = 1;
    ServiceAccount service_account = 2;
  }

  message UserAccount {
    string id = 1;
  }

  message ServiceAccount {
    string id = 1;
  }
}
